frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dream-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dream-app-frontend
  template:
    metadata:
      labels:
        app: dream-app-frontend
    spec:
      containers:
        - name: dream-app-frontend
          image: dillax/dream-frontend:09fcca3c13260c384d37f6244a4351ed1a6050ee
          ports:
            - containerPort: 80
