backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dream-backend-service
spec:
  selector:
    app: dream-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
