frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dream-frontend-service
spec:
  selector:
    app: dream-app-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
