ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dream-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - dream.dillaxadhi.com
      secretName: dream-tls-secret

  rules:
    - host: dream.dillaxadhi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dream-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dream-backend-service
                port:
                  number: 80
